# stardust

./: .gitignore  .gitmodules  README.md
ros/src/sd_behavior/: CMakeLists.txt  README.md  package.xml
ros/src/sd_behavior/bags/: r1_homol.bag  r2_jaune.bag  r2_jaune_13pts.bag  r2_palets_depart_jaune.bag  r2_palets_depart_violet.bag  r2_violet.bag  r2_violet_13pts.bag
ros/src/sd_behavior/config/: bt_demo.xml  bt_pierre.xml  bt_training.xml  r1_behavior.yaml  r1_bt.xml  r2_behavior.yaml  r2_bt.xml  rosconsole_debug.conf  tests_bt.xml
ros/src/sd_behavior/include/: ApproachObject.h  InitialiserRobot.h  IsNotTimeOut.h  ResterSurPlace.h  robot_sensors_nodes.h
ros/src/sd_behavior/include/sd_behavior/: control_nodes.h  eye_nodes.h  gripper_nodes.h  laser_nodes.h  move_nodes.h  rosbag_nodes.h  score_nodes.h  sensors_nodes.h  status_node.h  status_nodes.h  timer_nodes.h
ros/src/sd_behavior/launch/: sd_behavior.launch  sd_behavior_test.launch
ros/src/sd_behavior/scripts/: sd_behavior_base_node.py
ros/src/sd_behavior/src/: AfficherLeScore.cpp  AfficherLeScore.h  ApproachObject.cpp  ApproachObject.h  GripperInterface.cpp  InitialiserRobot.cpp  IsNotTimeOut.cpp  ResterSurPlace.cpp  TiretteCondition.cpp  control_nodes.cpp  eye_nodes.cpp  gripper_nodes.cpp  isNotTimeOut.cpp  isNotTimeOut.h  laser_nodes.cpp  main.cpp  move_nodes.cpp  robot_sensors_nodes.cpp  rosbag_nodes.cpp  score_nodes.cpp  sensors_nodes.cpp  status_nodes.cpp  timer_nodes.cpp
ros/src/sd_behavior_msgs/: CMakeLists.txt  package.xml
ros/src/sd_behavior_msgs/msg/: Start.msg
ros/src/sd_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
ros/src/sd_calibration/config/: plotjuggler-pid-tuning.xml  plotjuggler_pid_tuning_r1.xml  plotjuggler_pid_tuning_r2.xml
ros/src/sd_calibration/launch/: sd_calibration.launch
ros/src/sd_calibration/scripts/: move.py
ros/src/sd_calibration/scripts/calibrate/: calibrate.py  move.py
ros/src/sd_calibration/scripts/sd_calibrate/: eval_static_friction.py  pid_tuning_move.py
ros/src/sd_control/: CMakeLists.txt  package.xml  three_omni_wheels_controller_plugins.xml
ros/src/sd_control/config/: r1_control.yaml  r2_control.yaml
ros/src/sd_control/launch/: r1_control.launch  r2_control.launch
ros/src/sd_control/src/: speed_limiter.cpp  three_omni_wheels_drive_controller.cpp  three_omni_wheels_odometry.cpp
ros/src/sd_description/: CMakeLists.txt  package.xml
ros/src/sd_description/launch/: r1_description.launch  r1_description_debug.launch  r2_description.launch  r2_description_debug.launch  r2_rviz.launch  sd_description.launch
ros/src/sd_description/meshes/: HC-SR04.stl  README.md  r1_base.stl  r2_base.stl
ros/src/sd_description/rviz/: r1.rviz  r1_debug.rviz  r2.rviz  r2_debug.rviz
ros/src/sd_description/urdf/: materials.xacro  r1.gazebo  r1.xacro  r2.gazebo  r2.xacro
ros/src/sd_gazebo/: CMakeLists.txt  package.xml
ros/src/sd_gazebo/config/: r1_gazebo.yaml
ros/src/sd_gazebo/launch/: sd_gazebo.launch
ros/src/sd_gazebo/meshes/: TableElements2019 v63.iges  table_2019.stl
ros/src/sd_gazebo/rviz/: sd_gazebo.rviz
ros/src/sd_gazebo/scripts/: ground_truth_tf_broadcaster.py  spawn_model.py
ros/src/sd_gazebo/src/: ground_truth_tf_broadcaster.cpp
ros/src/sd_gazebo/urdf/: r1.gazebo.xacro  r2.gazebo.xacro  table_2019.xacro
ros/src/sd_gazebo/worlds/: AtomFactory.world  table_2019.world
ros/src/sd_hardware_interface/: CMakeLists.txt  README.md  package.xml
ros/src/sd_hardware_interface/cfg/: PID.cfg
ros/src/sd_hardware_interface/config/: r1_hardware_interface.yaml  r2_hardware_interface.yaml
ros/src/sd_hardware_interface/launch/: sd_hardware_interface.launch
ros/src/sd_hardware_interface/src/: control_loop.cpp  encoder.cpp  hardware_interface.cpp  hardware_node.cpp  velocity_controller.cpp
ros/src/sd_led_matrix/: CMakeLists.txt  README.md  package.xml  setup.py
ros/src/sd_led_matrix/images/: snake.piskel
ros/src/sd_led_matrix/launch/: sd_led_matrix.launch
ros/src/sd_led_matrix/msg/: Eye.msg
ros/src/sd_localization/: CMakeLists.txt  package.xml
ros/src/sd_localization/cfg/: SnapMap.cfg
ros/src/sd_localization/config/: amcl_office_map.yaml  amcl_table_map.yaml  r1_localization.yaml  r2_localization.yaml  sd_map.yaml
ros/src/sd_localization/launch/: sd_localization.launch  sd_localization_snap_map.launch
ros/src/sd_localization/msg/: SnapMapMonitor.msg
ros/src/sd_localization/src/: odom_to_map.cpp  sd_localization_snap_map.cpp
ros/src/sd_main/: CMakeLists.txt  package.xml
ros/src/sd_main/config/: r1_log_level.conf  r2_log_level.conf
ros/src/sd_main/launch/: r1.launch  r2.launch  rx.launch  sim.launch
ros/src/sd_navigation/: CMakeLists.txt  package.xml
ros/src/sd_navigation/cfg/: MapFromAttitude.cfg
ros/src/sd_navigation/config/: r1_costmap.yaml  r1_costmap_common_params.yaml  r1_move_base.yaml  r1_navigation.yaml  r2_costmap.yaml  r2_costmap_common_params.yaml  r2_move_base.yaml  r2_navigation.yaml  sd_map_1.yaml  sd_map_2.yaml  static_obstacle_office_map.yaml  static_obstacle_table_map.yaml
ros/src/sd_navigation/launch/: sd_navigation.launch
ros/src/sd_navigation/src/: map_from_attitude_node.cpp
ros/src/sd_sensor/: CMakeLists.txt  package.xml  sd_sensor_plugins.xml
ros/src/sd_sensor/config/: r1_laser_config.yaml  r1_sensor_config.yaml  r2_laser_config.yaml  r2_sensor_config.yaml
ros/src/sd_sensor/launch/: sd_sensor.launch
ros/src/sd_sensor/src/: laser_pattern_detector.cpp  mpu6050_fifo_node.cpp  mpu6050_node.cpp  r2_sensor_node.cpp  sd_sensors_filters.cpp
ros/src/sd_sensor/srv/: GetBias.srv
ros/src/sd_sensor_msgs/: CMakeLists.txt  package.xml
ros/src/sd_sensor_msgs/msg/: LaserPatternDetector.msg
ros/src/sd_teleop/: CMakeLists.txt  package.xml
ros/src/sd_teleop/cfg/: Teleop.cfg
ros/src/sd_teleop/config/: joy.yaml  joy_ps.yaml  joy_xbox.yaml  r1_teleop.yaml  r2_teleop.yaml  sd_teleop.yaml
ros/src/sd_teleop/launch/: sd_teleop.launch
ros/src/sd_teleop/src/: cmd_vel_selector_node.cpp  joy_convert_node.cpp  joy_switcher_node.cpp  ps_pad.h  teleop_node.cpp  twist_switcher_node.cpp  xbox_pad.h
(+88 files in other folders)
