<?xml version="1.0"?>
<package format="2">
  <name>sd_behavior</name>
  <version>0.0.0</version>
  <description>Robot behavior</description>

  <maintainer email="cbx@todo.todo">cbx</maintainer>
  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>sd_sensor_msgs</depend>
  <depend>sd_led_matrix</depend>
</package>



