<?xml version="1.0"?>
<package format="2">
  <name>sd_behavior_msgs</name>
  <version>0.0.0</version>
  <description>The sd_behavior_msgs package</description>

  <maintainer email="cbx@todo.todo">cbx</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
