<?xml version="1.0"?>
<package format="2">
  <name>sd_control</name>
  <version>0.0.1</version>
  <description>Controllers for a differential drive mobile base and a three omni wheels mobile base</description>

  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>
  <author email="jbayle@gmail.com">Julien BAYLE</author>
  <author email="cbx@todo.todo">cbx</author>

  <license>MIT</license>

  <url type="website">https://github.com/julienbayle/stardust</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>diff_drive_controller</depend>
  <depend>controller_interface</depend>
  <depend>joint_state_controller</depend>

  <export>
    <controller_interface plugin="${prefix}/three_omni_wheels_controller_plugins.xml"/>
  </export>
</package>