<?xml version="1.0"?>
<package format="2">
  <name>sd_gazebo</name>
  <version>0.0.1</version>
  <description>Robots simulation in GAZEBO</description>

  <maintainer email="cbx@todo.todo">cbx</maintainer>
  <author email="cbx@todo.todo">cbx</author>
  <author email="jbayle@gmail.com">Julien BAYLE</author>
  
  <license>MIT</license>
  <url type="website">https://github.com/julienbayle/stardust</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>
