<?xml version="1.0"?>
<package format="2">
  <name>sd_led_matrix</name>
  <version>0.0.1</version>
  <description>LED Matrix 32 x 8</description>
  <maintainer email="julienbayle@github.com">Julien BAYLE</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
