<?xml version="1.0"?>
<package format="2">
  <name>sd_localization</name>
  <version>0.0.0</version>
  <description>The sd_localization package</description>

  <maintainer email="cbx@todo.todo">cbx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>imu_tools</exec_depend>

  <export>
  </export>
</package>
