<?xml version="1.0"?>
<package format="2">
  <name>sd_navigation</name>
  <version>0.0.0</version>
  <description>The sd_navigation package</description>

  <maintainer email="cbx@todo.todo">cbx</maintainer>
  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>teb_local_planner</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>global_planner</exec_depend>

  <export />

</package>
