<?xml version="1.0"?>
<package format="2">
  <name>sd_sensor</name>
  <version>0.0.0</version>
  <description>The sd_sensor package</description>

  <maintainer email="cbx@todo.todo">cbx</maintainer>
  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ydlidar</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>filters</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>ydlidar</exec_depend>
  <depend>laser_filters</depend>
  <depend>libi2c-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <filters plugin="${prefix}/sd_sensor_plugins.xml"/>
  </export>
</package>
