<?xml version="1.0"?>
<package format="2">
  <name>sd_sensor_msgs</name>
  <version>0.0.1</version>
  <description>sd_sensor messages package</description>

  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
