cmake_minimum_required(VERSION 2.8.3)
project(sd_teleop)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED
	geometry_msgs
	sensor_msgs
	actionlib
	actionlib_msgs
	roscpp
)

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if your package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES sd_teleop
  CATKIN_DEPENDS joy
#  DEPENDS system_lib
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
  ${catkin_INCLUDE_DIRS}
)

## Declare a C++ executable
## With catkin_make all packages are built within a single CMake context
## The recommended prefix ensures that target names across packages don't collide
add_executable(joy_convert_node 
	src/joy_convert_node.cpp
)

add_executable(joy_switcher_node 
	src/joy_switcher_node.cpp
)

add_executable(teleop_node
	src/teleop_node.cpp
)

## Add cmake target dependencies of the executable
## same as for the library above
add_dependencies(joy_switcher_node 
	${${PROJECT_NAME}_EXPORTED_TARGETS} 
	${catkin_EXPORTED_TARGETS}
)

add_dependencies(teleop_node 
	${${PROJECT_NAME}_EXPORTED_TARGETS} 
	${catkin_EXPORTED_TARGETS}
)

## Specify libraries to link a library or executable target against
target_link_libraries(joy_convert_node
  ${catkin_LIBRARIES}
)

target_link_libraries(joy_switcher_node
  ${catkin_LIBRARIES}
)

target_link_libraries(teleop_node
  ${catkin_LIBRARIES}
)
