<?xml version="1.0"?>
<package format="2">
  <name>sd_teleop</name>
  <version>0.0.1</version>
  <description>The sd_teleop package</description>

  <maintainer email="jbayle@gmail.com">Julien BAYLE</maintainer>
  <author email="jbayle@gmail.com">Julien BAYLE</author>
  
  <license>MIT</license>
  <url type="website">https://github.com/julienbayle/stardust</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>joy</exec_depend>

</package>
